      client.request.http.open_timeout = 30
      client.request.http.read_timeout = 30
    * Please refer to the Net::HTTP documentation for more details:
      http://www.ruby-doc.org/stdlib/libdoc/net/http/rdoc/index.html
  * Thanks to JulianMorrison, Savon now supports HTTP basic authentication:
    client.request.http.basic_auth "username", "password"
  * Added Savon::SOAP#namespace as a shortcut for setting the "xmlns:wsdl" namespace.
    Usage example: soap.namespace = "http://example.com"

== 0.6.8 (2010-01-01)
  * Improved specifications for various kinds of WSDL documents.
  * Added support for SOAP endpoints which are different than the WSDL endpoint of a service.
  * Changed how SOAP actions and inputs are retrieved from the WSDL documents. This might break a few existing
    implementations, but makes Savon work well with even more services. If this change breaks your implementation,
    please take a look at the +action+ and +input+ methods of the Savon::SOAP object.
    One specific problem I know of is working with the createsend WSDL and its namespaced actions.
    To make it work, call the SOAP action without namespace and specify the input manually:
    client.get_api_key { |soap| soap.input = "User.GetApiKey" }

== 0.6.7 (2009-12-18)
  * Implemented support for a proxy server. The proxy URI can be set through an optional Hash of options passed
    to instantiating Savon::Client (Dave Woodward <dave@futuremint.com>)
  * Implemented support for SSL client authentication. Settings can be set through an optional Hash of arguments
    passed to instantiating Savon::Client (colonhyphenp)
  * Patch for issue #10 (Problem with operation tags without a namespace).

== 0.6.6 (2009-12-14)
  * Default to use the name of the SOAP action (the method called in a client) in lowerCamelCase for SOAP action
    and input when Savon::WSDL is disabled. You still need to specify soap.action and maybe soap.input in case
    your SOAP actions are named any different.
