@@ -19,6 +19,9 @@
       http://www.ruby-doc.org/stdlib/libdoc/net/http/rdoc/index.html
   * Thanks to JulianMorrison, Savon now supports HTTP basic authentication:
     client.request.http.basic_auth "username", "password"
+  * Julian also added a way to explicitly specify the order of Hash keys and values, so you should now be able
+    to work with services requiring a specific order of input parameters while still using Hash input.
+    For example: client.find_user { |soap| soap.body = { :name => "Lucy", :id => 666, :@inorder => [:id, :name] } }
   * Added Savon::SOAP#namespace as a shortcut for setting the "xmlns:wsdl" namespace.
     Usage example: soap.namespace = "http://example.com"
 
